chore: Update landing page with social proof section and fix CSS overflow issue

--- a/src/app/styles/less/home.less
+++ b/src/app/styles/less/home.less
@@ -586,7 +586,7 @@
     gap: 1rem;
     padding: 2rem 6rem;
     box-sizing: border-box;
-    background-color: @primaryColor;
+    background-color: #fff;
     // color: #fff;
     box-shadow: 0 0 1rem #00000015;
     border: 1px solid #00000015;
@@ -846,6 +846,18 @@
     padding: 2rem 10rem;
     width: 100%;
     box-sizing: border-box;
+    //animation that makes each of the items expand for a second one after the other
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.05);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
     div {
       .flexCenter(column);
       width: 100%;
@@ -853,6 +865,194 @@
         max-width: 10rem;
         width: 100%;
         height: auto;
+        transition: all 200ms ease-in-out;
+        &:hover {
+          transform: scale(1.05);
+        }
+        &:nth-child(odd) {
+          animation: pulse 2000ms ease-in-out 1s infinite;
+        }
+        &:nth-child(even) {
+          animation: pulse 2000ms ease-in-out 2s infinite;
+        }
+      }
+    }
+  }
+}
+
+.waitlistPopupVisible {
+  .flexCenter(column);
+}
+
+.waitlistPopupHidden {
+  display: none;
+}
+
+.waitlistPopup {
+  position: fixed;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000aa;
+  backdrop-filter: blur(10px);
+  animation: blurryBg 5000ms ease-in-out infinite;
+  @keyframes blurryBg {
+    0% {
+      backdrop-filter: blur(10px);
+    }
+    50% {
+      backdrop-filter: blur(15px);
+    }
+    100% {
+      backdrop-filter: blur(10px);
+    }
+  }
+  .waitlistPopupContent {
+    .flexCenter(column);
+    gap: 1rem;
+    padding: 2rem 4rem;
+    box-sizing: border-box;
+    border-radius: 2rem;
+    background-color: #fff;
+    box-shadow: 0 0 1rem #00000015;
+    h3 {
+      font-size: 2rem;
+      font-weight: 600;
+      margin: 0;
+    }
+    p {
+      font-size: 1rem;
+      font-weight: 400;
+      max-width: 80%;
+      text-align: center;
+    }
+    form {
+      .flexCenter(column);
+      gap: 1rem;
+      width: 100%;
+      input {
+        width: 100%;
+        padding: 0.5rem 1rem;
+        border-radius: 0.4rem;
+        border: 1px solid #1a1a1a60;
+        background-color: #fff;
+        font-weight: 500;
+        font-size: 1rem;
+        transition: all 200ms ease-in-out;
+        &:focus {
+          border: 1px solid #1a1a1a;
+        }
+      }
+      button {
+        padding: 0.5rem 1rem;
+        border-radius: 0.4rem;
+        border: 1px solid transparent;
+        background-color: #1a1a1a;
+        color: #fff;
+        font-family: @fontFamilyMain;
+        font-weight: 500;
+      }
+    }
+  }
+}
+
+.contactUsSection {
+  .flexCenter(column);
+  width: 100%;
+  padding: 8rem 12rem 4rem;
+  box-sizing: border-box;
+  h2 {
+    font-size: 5rem;
+    font-weight: 600;
+    letter-spacing: -0.2rem;
+    margin: 2rem 0 0;
+  }
+  .contactUsWrapper {
+    .flexCenter(row);
+    align-items: flex-start;
+    gap: 1rem;
+    width: 100%;
+    padding: 4rem 0;
+  }
+  .contactUsDisclaimer {
+    width: 50%;
+    font-size: 1rem;
+    font-weight: 600;
+    color: #1a1a1a99;
+    padding: 0 1rem;
+    box-sizing: border-box;
+    p {
+      max-width: 80%;
+      padding: 0 2rem;
+    }
+    img {
+      width: 90%;
+    }
+  }
+  form {
+    .flexCenter(column);
+    gap: 1rem;
+    width: 50%;
+    .contactUsInfo {
+      .flexCenter(row);
+      gap: 1rem;
+      width: 100%;
+    }
+    select {
+      width: 20rem;
+      align-self: flex-start;
+      padding: 0.5rem 1rem;
+      border-radius: 0.4rem;
+      border: 1px solid #1a1a1a60;
+      background-color: #fff;
+      font-weight: 500;
+      font-size: 1rem;
+      font-family: @fontFamilyMain;
+      transition: all 200ms ease-in-out;
+      box-sizing: border-box;
+      cursor: pointer;
+      &:focus {
+        border: 1px solid #1a1a1a;
+      }
+    }
+    input,
+    textarea {
+      width: 100%;
+      padding: 0.5rem 1rem;
+      border-radius: 0.4rem;
+      border: 1px solid #1a1a1a60;
+      background-color: #fff;
+      font-weight: 500;
+      font-size: 1rem;
+      font-family: @fontFamilyMain;
+      transition: all 200ms ease-in-out;
+      box-sizing: border-box;
+      &:focus {
+        border: 1px solid #1a1a1a;
+      }
+    }
+    a {
+      align-self: flex-start;
+      padding: 0.5rem 1rem;
+      border-radius: 0.4rem;
+      border: 1px solid transparent;
+      background-color: #1a1a1a;
+      color: #fff;
+      font-family: @fontFamilyMain;
+      font-weight: 600;
+      font-size: 1.1rem;
+      transition: all 200ms ease-in-out;
+      cursor: pointer;
+      border: 1px solid transparent;
+      text-decoration: none;
+      &:hover {
+        transform: translateY(-0.2rem);
+        background-color: #fff;
+        color: #1a1a1a;
+        filter: drop-shadow(0 0 0.5rem #00000015);
+        border: 1px solid #1a1a1a60;
       }
     }
   }
